Fix #106: Update web site
- Say that SARIF is an approved TC Specification.
- Set the NuGet links to always point to the "latest" packages.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
     <a name="Specification"></a>
     <div id="specSectionTitle" role="heading" aria-level="2" class="content-section-title">Specification</div>
     <div class="content-section-text content-section-description">
-        The <b>Static Analysis Results Interchange Format (SARIF)</b> specification is currently being
-        standardized by <a href="https://www.oasis-open.org/" target="_blank" class="strong-link">OASIS</a> in the <a href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=sarif" target="_blank" class="strong-link">OASIS SARIF Technical Committee</a>. The information and tools
-        on this web site track the standard as it evolves to its final form.
-    </div>
+        The <b>Static Analysis Results Interchange Format (SARIF)</b> is an
+        <a href="https://www.oasis-open.org/" target="_blank" class="strong-link">OASIS</a> <a href="https://www.oasis-open.org/news/announcements/static-analysis-results-interchange-format-sarif-v2-1-0-from-the-sarif-tc-is-an-a" target="_blank" class="strong-link">Committee Specification</a>. The information and tools
+        on this web site apply to SARIF Version 2.1.0, the version approved by the OASIS <a href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=sarif" target="_blank" class="strong-link">SARIF Technical Committee</a>.
+</div>
     <div id="specSectionButtons">
         <div id="specSectionButtons1">
             <button id="specSectionButtonRead" role="button" href="https://docs.oasis-open.org/sarif/sarif/v2.1.0/cs01/" target="_blank" class="content-button sarifweb-button gray-section">Read the specification</button>
@@ -100,7 +100,7 @@
             <div role="list" aria-labelledby="toolsSectionPlatformLabelCSharp" class="tools-item-list">
                 <div role="listitem">
                     <div class="tools-item-description"><b>SDK</b> - Object model and utilities for reading and writing files in the SARIF format.</div>
-                    <button id="toolsItemSdkLink" role="button" aria-label="View SARIF SDK NuGet package" href="https://www.nuget.org/packages/Sarif.Sdk/2.1.0-beta.1" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemSdkLink" role="button" aria-label="View SARIF SDK NuGet package" href="https://www.nuget.org/packages/Sarif.Sdk/" target="_blank" class="tools-item-button sarifweb-button">
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" alt="NuGet" />
                         </div>
@@ -109,7 +109,7 @@
                 </div>
                 <div role="listitem">
                     <div class="tools-item-description"><b>Driver</b> - Framework for creating a command line analysis tool which produces files in the SARIF format.</div>
-                    <button id="toolsItemDriverLink" role="button" aria-label="View SARIF Driver NuGet package" href="https://www.nuget.org/packages/Sarif.Driver/2.1.0-beta.1" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemDriverLink" role="button" aria-label="View SARIF Driver NuGet package" href="https://www.nuget.org/packages/Sarif.Driver/" target="_blank" class="tools-item-button sarifweb-button">
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" alt="NuGet" />
                         </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div role="listitem">
                     <div class="tools-item-description"><b>Converters</b> - classes for converting the output of various static analysis tools to the SARIF format.</div>
-                    <button id="toolsItemConvertersLink" role="button" aria-label="View SARIF Converters NuGet package" href="https://www.nuget.org/packages/Sarif.Converters/2.1.0-beta.1" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemConvertersLink" role="button" aria-label="View SARIF Converters NuGet package" href="https://www.nuget.org/packages/Sarif.Converters/" target="_blank" class="tools-item-button sarifweb-button">
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" alt="NuGet" />
                         </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div role="listitem">
                     <div class="tools-item-description"><b>Multitool</b> - Multi-purpose command line tool for analyzing and manipulating SARIF files.</div>
-                    <button id="toolsItemMultitoolLink" role="button" aria-label="View SARIF Multitool NuGet package" href="https://www.nuget.org/packages/Sarif.Multitool/2.1.0-beta.1" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemMultitoolLink" role="button" aria-label="View SARIF Multitool NuGet package" href="https://www.nuget.org/packages/Sarif.Multitool/" target="_blank" class="tools-item-button sarifweb-button">
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" alt="NuGet" />
                         </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div role="listitem">
                     <div class="tools-item-description"><b>Interop</b> - Library that enables Visual Studio extensions to easily consume services exposed by the SARIF Viewer for VS.</div>                  
-                    <button id="toolsItemInteropLink" role="button" aria-label="View SARIF Viewer interop library NuGet package" href="https://www.nuget.org/packages/Sarif.Viewer.VisualStudio.Interop/2.0.0-csd.1.0.3" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemInteropLink" role="button" aria-label="View SARIF Viewer interop library NuGet package" href="https://www.nuget.org/packages/Sarif.Viewer.VisualStudio.Interop/" target="_blank" class="tools-item-button sarifweb-button">
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" alt="NuGet" />
                         </div>
