Fix #108: Update with links to Python OM and tutorials

--- a/src/SarifWeb/Content/Home.css
+++ b/src/SarifWeb/Content/Home.css
@@ -130,7 +130,12 @@
 }
 
 #specSectionButtonRead {
-    height: 120px;
+    height: 58px;
+    width: 300px;
+}
+
+#specSectionButtonTutorials {
+    height: 58px;
     width: 300px;
 }
 
