Update "Try the React Component" URL.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -246,7 +246,7 @@
                 <img id="screenshot03" src="~/Images/Screenshots/WebViewer.thumbnail.jpeg" index="2" coloration="dark" role="button" aria-labelledby="webViewerCardTitle" alt="React component" />
             </div>
             <div class="viewer-buttons">
-                <button role="button" aria-label="Try the React component" href="http://sarifviewer.azurewebsites.net/" target="_blank" class="sarifweb-button">Try</button>
+                <button role="button" aria-label="Try the React component" href="https://microsoft.github.io/sarif-web-component/" target="_blank" class="sarifweb-button">Try</button>
                 <button role="button" aria-label="View React component source code" href="https://github.com/Microsoft/sarif-web-component" target="_blank" class="sarifweb-button">Source</button>
             </div>
         </div>
