--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         <div id="heroTagline">
             The Static Analysis Results Interchange Format (SARIF)
             <br />
-            defines a standard format for the output of static analysis tools.
+            is an industry standard format for the output of static analysis tools.
         </div>
     </div>
 </section>
@@ -26,14 +26,14 @@
     <a name="Specification"></a>
     <div id="specSectionTitle" role="heading" aria-level="2" class="content-section-title">Specification and documentation</div>
     <div class="content-section-text content-section-description">
-        The <b>Static Analysis Results Interchange Format (SARIF)</b> is an
-        <a href="https://www.oasis-open.org/" target="_blank" class="strong-link">OASIS</a> <a href="https://www.oasis-open.org/news/announcements/static-analysis-results-interchange-format-sarif-v2-1-0-from-the-sarif-tc-is-an-a" target="_blank" class="strong-link">Committee Specification</a>. The information and tools
-        on this web site apply to SARIF Version 2.1.0, the version approved by the OASIS <a href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=sarif" target="_blank" class="strong-link">SARIF Technical Committee</a>.
+        The <b>Static Analysis Results Interchange Format (SARIF)</b> has been <a href="https://www.oasis-open.org/news/announcements/static-analysis-results-interchange-format-sarif-v2-1-0-is-approved-as-an-oasis-s" target="_blank" class="strong-link">approved</a>
+        as an <a href="https://www.oasis-open.org/" target="_blank" class="strong-link">OASIS</a> standard.
+        The information and tools on this web site apply to SARIF Version 2.1.0, the version approved by the OASIS.
 </div>
     <div id="specSectionButtons">
         <div id="specSectionButtons1">
             <button id="specSectionButtonTutorials" role="button" href="https://github.com/microsoft/sarif-tutorials" target="_blank" class="content-button sarifweb-button gray-section">Study the tutorials</button>
-            <button id="specSectionButtonRead" role="button" href="https://docs.oasis-open.org/sarif/sarif/v2.1.0/cs01/" target="_blank" class="content-button sarifweb-button gray-section">Read the specification</button>
+            <button id="specSectionButtonRead" role="button" href="https://docs.oasis-open.org/sarif/sarif/v2.1.0/" target="_blank" class="content-button sarifweb-button gray-section">Read the specification</button>
             <button id="specSectionButtonAsk" role="button" href="https://github.com/oasis-tcs/sarif-spec/issues/new" target="_blank" class="content-button sarifweb-button gray-section">Ask a question</button>
         </div>
         <div id="specSectionButtons2">
