--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -112,6 +112,9 @@
                 </li>
             </ul>
         </div>
+        <div id="validatorToolbar2" data-disabled>
+            <input type="checkbox" id="gitHubDspRules" class="ui-widget" aria-label="Requirements for SARIF files uploaded to the GitHub Developer Security Portal"  title="Requirements for SARIF files uploaded to the GitHub Developer Security Portal" /><label for="gitHubDspRules">GitHub DSP rules</label>
+        </div>
         <div id="editor" role="textbox" aria-label="Log file editor"></div>
         <div id="validatorFooter">
             <div id="resultDetails"></div>
@@ -145,6 +148,7 @@
 
             let editor = null;
             const $pageBlanket = $("#pageBlanket");
+            const $gitHubDspRules = $("#gitHubDspRules");
             let isFileOpening = false;
 
             const ruleDescriptionTemplate = `<b><a href="{HELPURL}" target="_blank">{RULEID}</a>:</b> {RULEDESC}`;
@@ -289,13 +293,17 @@
                     let hasResults = false;
                     let toolError;
                     const run = validationLog.runs[0];
+                    const gitHubDspRulesEnabled = $gitHubDspRules.is(":checked");
 
                     if (run.results && run.results.length > 0) {
                         hasResults = true;
 
                         if (run.tool && run.tool.driver && run.tool.driver.rules) {
                             $.each(run.results, function (index, result) {
-                                addResult(run.tool.driver.rules[result.ruleIndex], result);
+                                const rule = run.tool.driver.rules[result.ruleIndex];
+                                if (gitHubDspRulesEnabled || !isGitHubDspRule(rule)) {
+                                    addResult(run.tool.driver.rules[result.ruleIndex], result);
+                                }
                             });
 
                             // Now we know how many result locations we have for each rule, so populate the rules dropdown
@@ -341,6 +349,13 @@
                     }
                     resolve();
                 });
+            }
+
+            function isGitHubDspRule(rule) {
+                // Rules in the range SARIF2017-SARIF2025 are used to validate SARIF files intended
+                // for upload to the GitHub Developer Security Portal (DSP).
+                let ruleNumber = rule.id.substring(5)
+                return ruleNumber >= 2017 && ruleNumber <= 2025;
             }
 
             // Downloads the complete text from the editor
