--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -154,6 +154,8 @@
             const $pageBlanket = $("#pageBlanket");
             const $gitHubDspRules = $("#gitHubDspRules");
             $gitHubDspRules.change(revalidate);
+            const $noteRules = $("#noteRules");
+            $noteRules.change(revalidate);
             let isFileOpening = false;
 
             const ruleDescriptionTemplate = `<b><a href="{HELPURL}" target="_blank">{RULEID}</a>:</b> {RULEDESC}`;
@@ -299,6 +301,7 @@
                     let toolError;
                     const run = validationLog.runs[0];
                     const gitHubDspRulesEnabled = $gitHubDspRules.is(":checked");
+                    const noteRulesEnabled = $noteRules.is(":checked");
 
                     if (run.results && run.results.length > 0) {
                         hasResults = true;
@@ -306,7 +309,7 @@
                         if (run.tool && run.tool.driver && run.tool.driver.rules) {
                             $.each(run.results, function (index, result) {
                                 const rule = run.tool.driver.rules[result.ruleIndex];
-                                if (gitHubDspRulesEnabled || !isGitHubDspRule(rule)) {
+                                if ((gitHubDspRulesEnabled || !isGitHubDspRule(rule)) && (noteRulesEnabled || !isNoteRule(rule))) {
                                     addResult(run.tool.driver.rules[result.ruleIndex], result);
                                 }
                             });
@@ -361,6 +364,11 @@
                 // for upload to the GitHub Developer Security Portal (DSP).
                 let ruleNumber = rule.id.substring(5)
                 return ruleNumber >= 2017 && ruleNumber <= 2025;
+            }
+
+            function isNoteRule(rule) {
+                let level = rule.defaultConfiguration.level;
+                return level !== "warning" || level !== "error";
             }
 
             // Downloads the complete text from the editor
