--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -296,65 +296,65 @@
                 return new Promise(function (resolve, reject) {
                     rulesDictionary = {};
                     resultsDictionary = {};
+                    clearRuleList();
+                    setResultPositionText(0, 0);
+                    setResultLocationDetails();
+                    setToolbarEnabled(false);
+                    clearLineMarkers();
+                    clearGutterDecoration();
+                    currentResultLocationIndex = -1;
+
                     validationLog = JSON.parse(sarif);
-                    let hasResults = false;
-                    let toolError;
                     const run = validationLog.runs[0];
                     const gitHubDspRulesEnabled = $gitHubDspRules.is(":checked");
                     const noteRulesEnabled = $noteRules.is(":checked");
 
                     if (run.results && run.results.length > 0) {
-                        hasResults = true;
-
+                        let hasResults = false;
                         if (run.tool && run.tool.driver && run.tool.driver.rules) {
                             $.each(run.results, function (index, result) {
                                 const rule = run.tool.driver.rules[result.ruleIndex];
-                                if ((gitHubDspRulesEnabled || !isGitHubDspRule(rule)) && (noteRulesEnabled || !isNoteRule(rule))) {
+                                const isDsp = isGitHubDspRule(rule);
+                                const isNote = isNoteRule(rule);
+                                if ((!isDsp && !isNote) ||
+                                    (isDsp && gitHubDspRulesEnabled) ||
+                                    (isNote && noteRulesEnabled)) {
                                     addResult(run.tool.driver.rules[result.ruleIndex], result);
+                                    hasResults = true;
                                 }
                             });
 
-                            // Now we know how many result locations we have for each rule, so populate the rules dropdown
-                            const options = [];
-                            for (let key in rulesDictionary) {
-                                options.push("<option value='" + key + "'>" + key + " (" + rulesDictionary[key].resultKeys.length + ")</option>");
-                            }
+                            if (hasResults) {
+                                // Now we know how many result locations we have for each rule, so populate the rules dropdown
+                                const options = [];
+                                for (let key in rulesDictionary) {
+                                    options.push("<option value='" + key + "'>" + key + " (" + rulesDictionary[key].resultKeys.length + ")</option>");
+                                }
 
-                            // Clear the dropdown, then add the rules and trigger a close event
-                            clearRuleList();
-                            $ruleList.append(options.join(""))
-                                .multiselect("refresh")
-                                .multiselect("checkAll")
-                                .multiselect("close");
+                                // Add the rules to the drop-down and then trigger a close event.
+                                $ruleList.append(options.join(""))
+                                    .multiselect("refresh")
+                                    .multiselect("checkAll")
+                                    .multiselect("close");
+                            }
                         }
                     } else if (run.invocations[0].toolExecutionNotifications.length > 1) {
                         const errorNote = run.invocations[0].toolExecutionNotifications[1];
 
                         if (errorNote.level === "error") {
-                            toolError = errorNote.message.text;
+                            let toolError = errorNote.message.text;
+                            if (toolError) {
+                                setTimeout(function () {
+                                    // Push this to another thread to allow the above settings to take effect
+                                    alert(toolError);
+                                }, 0);
+                            } else {
+                                $ruleDescription.html(noErrorsText);
+                            }
                         }
                     }
 
-                    if (!hasResults) {
-                        rulesDictionary = {};
-                        resultsDictionary = {};
-                        clearRuleList();
-                        setResultPositionText(0, 0);
-                        setResultLocationDetails();
-                        setToolbarEnabled(false);
-                        clearLineMarkers();
-                        clearGutterDecoration();
-                        currentResultLocationIndex = -1;
-
-                        if (toolError) {
-                            setTimeout(function () {
-                                // Push this to another thread to allow the above settings to take effect
-                                alert(toolError);
-                            }, 0);
-                        } else {
-                            $ruleDescription.html(noErrorsText);
-                        }
-                    }
+                    setToolbarEnabled(true);
                     resolve();
                 });
             }
