--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -153,9 +153,9 @@
             let editor = null;
             const $pageBlanket = $("#pageBlanket");
             const $gitHubDspRules = $("#gitHubDspRules");
-            $gitHubDspRules.change(revalidate);
+            $gitHubDspRules.change(processValidationLog);
             const $noteRules = $("#noteRules");
-            $noteRules.change(revalidate);
+            $noteRules.change(processValidationLog);
             let isFileOpening = false;
 
             const ruleDescriptionTemplate = `<b><a href="{HELPURL}" target="_blank">{RULEID}</a>:</b> {RULEDESC}`;
@@ -663,7 +663,23 @@
                 }
             }
 
-            function revalidate() {
+            $(document).on("keyup", function (e) {
+                if (e.key === "F7") {
+                    goToPreviousResultLocation();
+                } else if (e.key === "F8") {
+                    goToNextResultLocation();
+                }
+            });
+
+            $prevResultButton.on("click", function () {
+                goToPreviousResultLocation();
+            });
+
+            $nextResultButton.on("click", function () {
+                goToNextResultLocation();
+            });
+
+            $revalidateButton.on("click", function () {
                 // Disable controls
                 setToolbarEnabled(false);
                 $dropForm.addClass("is-busy").removeClass("is-complete").removeClass("is-error");
@@ -699,25 +715,7 @@
                         alert(error);
                     }
                 });
-            }
-
-            $(document).on("keyup", function (e) {
-                if (e.key === "F7") {
-                    goToPreviousResultLocation();
-                } else if (e.key === "F8") {
-                    goToNextResultLocation();
-                }
             });
-
-            $prevResultButton.on("click", function () {
-                goToPreviousResultLocation();
-            });
-
-            $nextResultButton.on("click", function () {
-                goToNextResultLocation();
-            });
-
-            $revalidateButton.on("click", revalidate);
 
             $utilitiesButton.button().on("click", function () {
                 $utilitiesMenu.show().position({
