Fix #117: Replace Semmle logo tile with GitHub.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -68,8 +68,8 @@
         <a href="https://www.microsoft.com/" target="_blank">
             <img role="listitem" aria-label="Microsoft" src="~/Images/Logos/Microsoft.png" alt="Microsoft" />
         </a>
-        <a href="https://semmle.com/" target="_blank">
-            <img role="listitem" aria-label="Semmle" src="~/Images/Logos/Semmle.png" alt="Semmle" />
+        <a href="https://github.com/features/security" target="_blank">
+            <img role="listitem" aria-label="GitHub, Inc." src="~/Images/Logos/GitHub.png" alt="GitHub, Inc." />
         </a>
         <a href="https://continuousassurance.org/" target="_blank">
             <img role="listitem" aria-label="SWAMP" src="~/Images/Logos/SWAMP.png" alt="SWAMP" />
