Enabling options by default

--- a/src/SarifWeb/Views/Validation/Index.cshtml
+++ b/src/SarifWeb/Views/Validation/Index.cshtml
@@ -64,10 +64,10 @@
                     <span class="ui-icon ui-icon-gear">icon</span>
                 </button>
                 <div id="ruleFilters">
-                    <input type="checkbox" id="noteRules" aria-labelledby="noteRulesLabel" title="More ways to improve your SARIF files." disabled />
+                    <input type="checkbox" id="noteRules" aria-labelledby="noteRulesLabel" checked="checked" title="More ways to improve your SARIF files." disabled />
                     <label id="noteRulesLabel" for="noteRules" class="ui-widget">Additional suggestions</label>
                     <br />
-                    <input type="checkbox" id="gitHubRules" aria-labelledby="gitHubRulesLabel" title="Requirements for SARIF files uploaded to GitHub Advanced Security code scanning." disabled />
+                    <input type="checkbox" id="gitHubRules" aria-labelledby="gitHubRulesLabel" checked="checked" title="Requirements for SARIF files uploaded to GitHub Advanced Security code scanning." disabled />
                     <label id="gitHubRulesLabel" for="gitHubRules" class="ui-widget">GitHub ingestion rules</label>
                 </div>
             </div>
