Addressing PR feedback

--- a/src/SarifWeb/Views/Validation/Index.cshtml
+++ b/src/SarifWeb/Views/Validation/Index.cshtml
@@ -63,7 +63,7 @@
                 <button id="utilitiesButton" aria-label="Utilities menu" title="Utilities menu" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-gear">icon</span>
                 </button>
-                <div id="ruleFilters" no-disable>
+                <div id="ruleFilters" no-data-disabled>
                     <input type="checkbox" id="noteRules" aria-labelledby="noteRulesLabel" title="More ways to improve your SARIF files." />
                     <label id="noteRulesLabel" for="noteRules" class="ui-widget">Additional suggestions</label>
                     <br />
