Removing disabled tag from inputs (#139)
* Enabling options by default

* Removing unused logic

* Updating based on feedback

* Addressing PR feedback

* Adding release history

* Update SarifWeb.csproj

* Addressing PR feedback

--- a/src/SarifWeb/Views/Validation/Index.cshtml
+++ b/src/SarifWeb/Views/Validation/Index.cshtml
@@ -63,11 +63,11 @@
                 <button id="utilitiesButton" aria-label="Utilities menu" title="Utilities menu" class="toolbar-button" disabled>
                     <span class="ui-icon ui-icon-gear">icon</span>
                 </button>
-                <div id="ruleFilters">
-                    <input type="checkbox" id="noteRules" aria-labelledby="noteRulesLabel" title="More ways to improve your SARIF files." disabled />
+                <div id="ruleFilters" no-data-disabled>
+                    <input type="checkbox" id="noteRules" aria-labelledby="noteRulesLabel" title="More ways to improve your SARIF files." />
                     <label id="noteRulesLabel" for="noteRules" class="ui-widget">Additional suggestions</label>
                     <br />
-                    <input type="checkbox" id="gitHubRules" aria-labelledby="gitHubRulesLabel" title="Requirements for SARIF files uploaded to GitHub Advanced Security code scanning." disabled />
+                    <input type="checkbox" id="gitHubRules" aria-labelledby="gitHubRulesLabel" title="Requirements for SARIF files uploaded to GitHub Advanced Security code scanning." />
                     <label id="gitHubRulesLabel" for="gitHubRules" class="ui-widget">GitHub ingestion rules</label>
                 </div>
             </div>
@@ -532,8 +532,6 @@
                     $(button).button(verb);
                 });
                 $ruleList.multiselect(verb);
-                let ruleFilterControls = $("#ruleFilters > *");
-                ruleFilterControls.attr("disabled", !enable);
             }
 
             function clearRuleList() {
