--- a/src/SarifWeb/wwwroot/css/Validator.css
+++ b/src/SarifWeb/wwwroot/css/Validator.css
@@ -31,6 +31,10 @@
     font-size: 20px;
 }
 
+#validatorToolbar *[no-data-disabled] {
+    color: initial;
+}
+
 #leftToolbarGroup {
     align-items: flex-start;
     flex: 1;
