Add JavaScript SDK to website libraries list

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -147,6 +147,20 @@
             </div>
         </div>
         <div id="toolsSectionContentOther" role="list" aria-label="Tools and libraries written in other languages" class="tools-item-list">
+            <div role="listitem" aria-labelledby="toolsSectionPlatformLabelJavaScript">
+                <div class="tools-item-other-label">
+                    <div id="toolsSectionPlatformLabelJavaScript" class="tools-section-platform-label-small">
+                        JavaScript
+                    </div>
+                    <div class="path-line-container">
+                        <svg class="stretch-horizonal">
+                            <line x1="0" x2="100%" y1="50%" y2="50%" class="stroke-1x" />
+                            <line x1="100%" x2="100%" y1="0" y2="100%" class="stroke-2x" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="tools-item-description tools-other-item-description"><a href="https://github.com/microsoft/sarif-js-sdk">Code and supporting files</a> for working with SARIF in JavaScript applications.</div>
+            </div>
             <div role="listitem" aria-labelledby="toolsSectionPlatformLabelTypeScript">
                 <div class="tools-item-other-label">
                     <div id="toolsSectionPlatformLabelTypeScript" class="tools-section-platform-label-small">
