Page security and performance

--- a/src/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/src/SarifWeb/Views/Shared/_Layout.cshtml
@@ -3,15 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Static Analysis Results Interchange Format (SARIF) Website">
     <title>@ViewBag.Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link href="~/css/Frame.css" rel="stylesheet" />
     <link href="~/css/Frame-Media-Mobile.css" rel="stylesheet" media="only screen and (min-width: 320px) and (max-width: 480px)" />
     <link href="~/css/Frame-Media-Mobile-Landscape.css" rel="stylesheet" media="only screen and (min-width: 481px) and (max-width: 853px)" />
     <link href="~/css/Frame-Media-Tablet.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px)" />
     <link href="~/css/Frame-Media-Tablet-Landscape.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape)" />
     <script src="~/js/modernizr-2.6.2.js"></script>
-    <script src="~/js/jquery-3.3.1.min.js"></script>
+    <script src="~/js/jquery-3.6.0.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/respond.min.js"></script>
     @RenderSection("scripts", required: false)
