--- a/src/SarifWeb/wwwroot/css/Frame.css
+++ b/src/SarifWeb/wwwroot/css/Frame.css
@@ -65,7 +65,7 @@ header > div {
 }
 
 .header-site-title {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
     font-size: 18px;
     font-weight: bold;
     margin-left: 63px;
@@ -82,7 +82,7 @@ header > div {
     background-color: #FFCC00;
     border: solid 1px #000;
     border-radius: 3px;
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
     font-size: 10px;
     padding: 3px 6px;
     white-space: nowrap;
