--- a/src/SarifWeb/wwwroot/css/Home.css
+++ b/src/SarifWeb/wwwroot/css/Home.css
@@ -41,7 +41,7 @@
 }
 
 #heroTitle {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
     font-size: 50px;
     grid-column: 2;
     grid-row: 1;
